[workspace]
members = [
  "luapack",
  "luapack-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = [
  "github.com/willtrnr",
]
edition = "2021"
rust-version = "1.84"
readme = "README.md"
repository = "https://github.com/willtrnr/luapack"
license = "MIT"

[workspace.dependencies]
clap = "4.4"
clap-verbosity-flag = "3.0"
derive_builder = "0.20"
env_logger = "0.11"
eyre = "0.6"
full_moon = "0.18"
log = "0.4"
mimalloc = "0.1"
thiserror = "2.0"
