[package]
name = "luapack-core"
version = "0.1.0"
authors = ["github.com/willtrnr"]
edition = "2021"
description = "Luapack core library."
readme = "README.md"
repository = "https://github.com/willtrnr/reversynced"
license = "MIT"

[dependencies]
derive_builder = "0.12"
log = "0.4"
thiserror = "1.0"

[dependencies.full_moon]
version = "0.18.1"
default_features = false
features = [
  "lua54",
  "roblox",
]
