[package]
name = "luapack-core"
description = "Luapack - Core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_builder = { workspace = true }
full_moon = { workspace = true, features = ["lua54", "roblox"] }
log = { workspace = true }
thiserror = { workspace = true }
