[package]
name = "luapack"
description = "Webpack, but for Lua."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
luapack-core = { path = "../luapack-core" }

clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true }
env_logger = { workspace = true }
eyre = { workspace = true }
mimalloc = { workspace = true }
